refactor admin test and group list endpoints
